--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: DEV-BLOG(현재 이름 투표중)
-email: blog-name@gmail.com
+title: DeVlog
+#email: @gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   스드스 블로그입니다. 개발 회사이면서 개발자 블로그 하나 운영하지 않아서 그냥 저희가 만들어보려 합니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  devlog
 
 # Build settings
 markdown: kramdown
