--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 # Site settings
 title: Devlog
 email: devlog8@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  스드스 블로그입니다. 개발 회사이면서 개발자 블로그 하나 운영하지 않아서 그냥 저희가 만들어보려 합니다.
+# description: > # this means to ignore newlines until "baseurl:"
+#   스드스 블로그입니다. 개발 회사이면서 개발자 블로그 하나 운영하지 않아서 그냥 저희가 만들어보려 합니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
